@@ -18,7 +18,7 @@ public class FileManager {
      */
 
     public static void getResource(String fileName) {
-        String art = "resources/art/" + fileName;
+        String art = "./resources/art/" + fileName;
         try (BufferedReader br = new BufferedReader(new FileReader(art))) {
             String line;
             while ((line = br.readLine()) != null) {
@@ -55,7 +55,7 @@ public class FileManager {
      */
 
     public static String convertTxtToString(String fileName){
-        String file = "resources/" + fileName;
+        String file = "./resources/" + fileName;
         Path path = Paths.get(file);
         StringBuilder sb = new StringBuilder();
 
@@ -74,7 +74,7 @@ public class FileManager {
      */
 
     public static Map<String, ArrayList<String>> loadJson(String fileName) {
-        String file = "resources/cfg/" + fileName;
+        String file = "./resources/cfg/" + fileName;
         Gson gson = new Gson();
 
         try {
@@ -111,7 +111,7 @@ public class FileManager {
     public static Map<String, Map<String, Object>> loadFurniturePuzzlesTestJson(String path) {
         Gson gson = new Gson();
         try {
-            Reader reader = Files.newBufferedReader(Path.of(path));
+            Reader reader = Files.newBufferedReader(Paths.get(path));
             Map<String, Map<String, Object>> map = gson.fromJson(reader, Map.class);
             reader.close();
             return map;
@@ -122,8 +122,8 @@ public class FileManager {
     }
 
     public static void writeDefaults(){
-        String dirtyFilePath = "resources/furniture_puzzles.json";
-        String cleanFilePath = "resources/defaults/furniture_puzzles_test_defaults.json";
+        String dirtyFilePath = "./resources/furniture_puzzles.json";
+        String cleanFilePath = "./resources/defaults/furniture_puzzles_test_defaults.json";
         Map<String, Map<String, Object>> cleanFile = loadFurniturePuzzlesTestJson(cleanFilePath);
         writeJSONDefaults(cleanFile,dirtyFilePath);
     }
